feat: Product 생성자 수정